--- a/.github/workflows/telegram_sync.yml
+++ b/.github/workflows/telegram_sync.yml
@@ -1,32 +1,34 @@
-name: Telegram Web Scraper Sync
+name: Update Telegram Subs
 
 on:
-  #schedule:
-   # - cron: '0 */6 * * *' # هر ۶ ساعت یکبار چک می‌کند
+#  schedule:
+   # - cron: '0 */4 * * *' # هر ۴ ساعت
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
+    - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install requests beautifulsoup4 pyyaml lxml
 
-    - name: Run Web Scraper
+    - name: 1. Run Scraper (Download Messages)
       run: python src/telegram_scraper.py
 
-    - name: Commit and Push
+    - name: 2. Run Extractor (Process Configs)
+      run: python src/config_extractor.py
+
+    - name: Commit Changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: "Web Update: Telegram messages [skip ci]"
-        file_pattern: 'src/telegram/*'
+        commit_message: "Auto-update: Archives & Subs [skip ci]"
+        file_pattern: 'src/telegram/* sub/*'
